--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -3,7 +3,8 @@
 		.swiper-wrapper
 			.swiper-slide
 				a(href="").img.padding-slide
-					img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
+					.container
+						img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
 			.swiper-slide
 				a(href="").video
 					<iframe src='https://www.vlive.tv/embed/165817?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen></iframe>
