--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -1,5 +1,5 @@
 .index-4(data-scroll-id="3")
-	.container
+	.container.selection__wrapper
 		.container-custom.size-1365px
 			.logo-selection
 				.img
@@ -15,20 +15,20 @@
 				.row
 					.item
 						.item__wrapper
-							a(href="") ARTIST OF THE YEAR
+							a(href="javascript:;" data-scroll-to="6") ARTIST OF THE YEAR
 					.item
 						.item__wrapper
-							a(href="") BEST VPOP COMEBACK
+							a(href="javascript:;" data-scroll-to="7") BEST VPOP COMEBACK
 					.item
 						.item__wrapper
-							a(href="") RISING START OF  THE YEAR
+							a(href="javascript:;" data-scroll-to="8") RISING START OF  THE YEAR
 					.item
 						.item__wrapper
-							a(href="") V MEMBERSHIP COMMUNITY 
+							a(href="javascript:;" data-scroll-to="9") V MEMBERSHIP COMMUNITY 
 					.item
 						.item__wrapper
-							a(href="") BEST STAGE OF V HEARTBEAT
-	.container.block-vote
+							a(href="javascript:;" data-scroll-to="10") BEST STAGE OF V HEARTBEAT
+	.container.block-vote(data-scroll-id="6")
 		.container-custom.size-1365px
 			.title
 				h3 ARTIST OF THE YEAR
@@ -65,7 +65,7 @@
 								img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
 							figcaption
 								h5 Bình Chọn
-	.container.block-vote
+	.container.block-vote(data-scroll-id="7")
 		.container-custom.size-1365px
 			.title
 				h3 BEST VPOP COMBACK
@@ -102,7 +102,7 @@
 								img.ofc(src="./assets/images/item-vote/best_come_back/5.jpg", alt="")
 							figcaption
 								h5 Bình Chọn
-	.container.block-vote
+	.container.block-vote(data-scroll-id="8")
 		.container-custom.size-1365px
 			.title
 				h3 RISING STAR OF THE YEAR
@@ -139,7 +139,7 @@
 								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
 							figcaption
 								h5 Bình Chọn
-	.container.block-vote
+	.container.block-vote(data-scroll-id="9")
 		.container-custom.size-1365px
 			.title
 				h3 V MEMBERSHIP COMMUNITY
@@ -176,7 +176,7 @@
 								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/5.jpg", alt="")
 							figcaption
 								h5 Bình Chọn
-	.container.block-vote
+	.container.block-vote(data-scroll-id="10")
 		.container-custom.size-1365px
 			.title
 				h3 BEST STAGE OF V HEARTBEAT
