--- a/src/components/index/i-5.pug
+++ b/src/components/index/i-5.pug
@@ -27,4 +27,4 @@
 						<area shape="circle" coords="294, 206, 128" href="https://channels.vlive.tv/AA1AA3" target="_blank" alt="Nguyễn Trần Trung Quân" title="Nguyễn Trần Trung Quân" />
 						<area shape="circle" coords="603, 168, 148" target="_blank" alt="Hoàng Thuỳ Linh" title="Hoàng Thuỳ Linh" />
 				.image-map
-					img(src='./assets/images/index/banner-5.jpg', alt='', usemap='#imagemap')
+					img(src='./assets/images/new-vline/banner.png', alt='', usemap='#imagemap')
