--- a/src/components/index/i-6.pug
+++ b/src/components/index/i-6.pug
@@ -46,22 +46,22 @@
 		.title-section
 			h3 VLIVE YEAR END PARTY
 		.block-video
-			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
 					p 2016
-			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
 					p 2016
-			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
 					p 2016
-			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
