--- a/src/components/index/i-5.pug
+++ b/src/components/index/i-5.pug
@@ -8,23 +8,21 @@
 			.iamgeMapCanvas
 				.image-canvas
 					map(name='imagemap')
-						<area shape="circle" coords="1765, 851, 89" target="_blank" alt="LIPB" title="LIPB" />
-						<area shape="circle" coords="1580, 943, 89" href="https://channels.vlive.tv/B0C9CD/home" target="_blank" alt="D1Verse" title="D1Verse" />
-						<area shape="circle" coords="1211, 837, 103" href="https://channels.vlive.tv/D3C56D" target="_blank" alt="Gin Tuấn Kiệt" title="Gin Tuấn Kiệt" />
-						<area shape="circle" coords="1646, 685, 90" href="https://channels.vlive.tv/B51943" target="_blank" alt="Amee" title="Amee" />
-						<area shape="circle" coords="1438, 772, 108" href="https://channels.vlive.tv/DF1403/home" target="_blank" alt="Uni5" title="Uni5" />
-						<area shape="circle" coords="1710, 483, 92" href="https://channels.vlive.tv/D6D50B" target="_blank" alt="Han Sara" title="Han Sara" />
-						<area shape="circle" coords="1404, 491, 151" href="https://channels.vlive.tv/F071D7" target="_blank" alt="Huyna" title="Huyna" />
-						<area shape="circle" coords="1590, 227, 149" href="https://channels.vlive.tv/F81E3/home" target="_blank" alt="Ngô Kiến Huy" title="Ngô Kiến Huy" />
-						<area shape="circle" coords="1274, 169, 144" href="https://channels.vlive.tv/DB2481" target="_blank" alt="Vũ Cát Tường" title="Vũ Cát Tường" />
-						<area shape="circle" coords="143, 886, 95" href="https://channels.vlive.tv/CCC64D" target="_blank" alt="Zero9" title="Zero9" />
-						<area shape="circle" coords="343, 943, 79" href="https://channels.vlive.tv/CA369F/home" target="_blank" alt="Jin Ju" title="Jin Ju" />
-						<area shape="circle" coords="670, 832, 121" href="https://channels.vlive.tv/A94ABD" target="_blank" alt="Jack KICM" title="Jack KICM" />
-						<area shape="circle" coords="436, 744, 107" target="_blank" alt="Trọng Hiếu" title="Trọng Hiếu" />
-						<area shape="circle" coords="202, 668, 106" href="https://channels.vlive.tv/F0A1D1/home" target="_blank" alt="Monstar" title="Monstar" />
-						<area shape="circle" coords="471, 453, 150" href="https://channels.vlive.tv/FE123" target="_blank" alt="Monsta X" title="Monsta X" />
-						<area shape="circle" coords="165, 431, 107" target="_blank" alt="Cá Hồi Hoang" title="Cá Hồi Hoang" />
-						<area shape="circle" coords="294, 206, 128" href="https://channels.vlive.tv/AA1AA3" target="_blank" alt="Nguyễn Trần Trung Quân" title="Nguyễn Trần Trung Quân" />
-						<area shape="circle" coords="603, 168, 148" target="_blank" alt="Hoàng Thuỳ Linh" title="Hoàng Thuỳ Linh" />
+						<area shape="circle" coords="445, 180, 125" href="https://channels.vlive.tv/AA1AA3" alt="Văn Mai Hương" target="_blank" alt="Văn Mai Hương" title="Văn Mai Hương" />
+						<area shape="circle" coords="185, 245, 100" href="https://channels.vlive.tv/AA1AA3" alt="Phan Duy Anh" target="_blank" alt="Phan Duy Anh" title="Phan Duy Anh" />
+						<area shape="circle" coords="380, 440, 115" href="https://channels.vlive.tv/AA1AA3" alt="Trịnh Thăng Bình" target="_blank" alt="Trịnh Thăng Bình" title="Trịnh Thăng Bình" />
+						<area shape="circle" coords="110, 470, 100" href="https://channels.vlive.tv/AA1AA3" alt="Jang Mi" target="_blank" alt="Jang Mi" title="Jang Mi" />
+						<area shape="circle" coords="140, 670, 85" href="https://channels.vlive.tv/AA1AA3" alt="JUKY SAN" target="_blank" alt="JUKY SAN" title="JUKY SAN" />
+						<area shape="circle" coords="335, 660, 95" href="https://channels.vlive.tv/AA1AA3" alt="COLOR" target="_blank" alt="COLOR" title="COLOR" />
+						<area shape="circle" coords="600, 610, 110" href="https://channels.vlive.tv/AA1AA3" alt="LIZ KIM CƯƠNG" target="_blank" alt="LIZ KIM CƯƠNG" title="LIZ KIM CƯƠNG" />
+						<area shape="circle" coords="975, 610, 110" href="https://channels.vlive.tv/AA1AA3" alt="MINH VƯƠNG M4U" target="_blank" alt="MINH VƯƠNG M4U" title="MINH VƯƠNG M4U" />
+						<area shape="circle" coords="1220, 660, 95" href="https://channels.vlive.tv/AA1AA3" alt="LIL ZPOET" target="_blank" alt="LIL ZPOET" title="LIL ZPOET" />
+						<area shape="circle" coords="1425, 670, 85" href="https://channels.vlive.tv/AA1AA3" alt="MANBO" target="_blank" alt="MANBO" title="MANBO" />
+						<area shape="circle" coords="1460, 470, 100" href="https://channels.vlive.tv/AA1AA3" alt="HIEUTHUHAI" target="_blank" alt="HIEUTHUHAI" title="HIEUTHUHAI" />
+						<area shape="circle" coords="1200, 440, 115" href="https://channels.vlive.tv/AA1AA3" alt="Trọng hiếu" target="_blank" alt="Trọng hiếu" title="Trọng hiếu" />
+						<area shape="circle" coords="1390, 245, 110" href="https://channels.vlive.tv/AA1AA3" alt="SUPER9" target="_blank" alt="SUPER9" title="SUPER9" />
+						<area shape="circle" coords="1130, 180, 125" href="https://channels.vlive.tv/AA1AA3" alt="ƯNG HOÀNG PHÚC" target="_blank" alt="ƯNG HOÀNG PHÚC" title="ƯNG HOÀNG PHÚC" />
+
 				.image-map
 					img(src='./assets/images/new-vline/banner.png', alt='', usemap='#imagemap')
+
