--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -82,6 +82,7 @@ html(lang="en")
 					.btn.btn-google
 						a(href="#") Sign up with google
 		block scripts
+		script(type="text/javascript", src="https://www.youtube.com/iframe_api")
 		script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
 		script(src='https://apis.google.com/js/platform.js?onload=onLoadCallback')
 		script(type="text/javascript", src="./js/core.min.js")
