--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -6,8 +6,8 @@
 					.container
 						img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
 			.swiper-slide
-				a(href="").video
-					<iframe src='https://www.vlive.tv/embed/165817?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen></iframe>
+				a(href="" data-youtube-id="jgZkrA8E5do").video.youtube-video
+					div#VYT
 			.swiper-slide
 				a(href="").img
 						img.ofc(src="./assets/images/new-vline/banner-3.png", alt="", srcset="")
