--- a/src/scss/abstracts/fonts.scss
+++ b/src/scss/abstracts/fonts.scss
@@ -2,3 +2,23 @@
 	font-family: Roboto;
 	src        : url("../fonts/Roboto.ttf");
 }
+@font-face {
+	font-family: SFUIDisplay-Regular;
+	src        : url("../fonts/SFUIDisplay-Regular.otf");
+}
+@font-face {
+	font-family: SFUIDisplay-Black;
+	src        : url("../fonts/SFUIDisplay-Black.otf");
+}
+@font-face {
+	font-family: SFUIDisplay-Light;
+	src        : url("../fonts/SFUIDisplay-Light.otf");
+}
+@font-face {
+	font-family: SFUIDisplay-Heavy;
+	src        : url("../fonts/SFUIDisplay-Heavy.otf");
+}
+@font-face {
+	font-family: SFUIDisplay-Bold;
+	src        : url("../fonts/SFUIDisplay-Bold.otf");
+}
