--- a/src/scss/globals/reset.scss
+++ b/src/scss/globals/reset.scss
@@ -24,7 +24,7 @@ section {
 
 body {
 	margin          : 0;
-	font-family     : Roboto;
+	font-family     : SFUIDisplay-Regular;
 	text-align      : left;
 	font-size       : 16px;
 	font-weight     : 400;
