--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -14,7 +14,7 @@ html(lang="en")
 		#fb-root
 		#loading
 			.logo-loader
-				img(src="./assets/images/logo.png", alt="")
+				img(src="./assets/images/new-vline/logo-heartbeat.png", alt="")
 			.progstat-wrapper Loading:
 				span#progstat 0
 				| %
