--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -77,9 +77,9 @@ html(lang="en")
 				.register
 					.title 
 						p ĐĂNG KÝ
-					.btn.btn-facebook
+					.btn.btn-facebook(data-key="415663406248992")
 						a(href="#") Sign up with FaceBook
-					.btn.btn-google
+					.btn.btn-google(data-key="111231613981-4ar5t5o0nmb5aon7f4eal155954didl4.apps.googleusercontent.com")
 						a(href="#") Sign up with google
 		block scripts
 		script(type="text/javascript", src="https://www.youtube.com/iframe_api")
