--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -6,7 +6,8 @@
 					.container
 						img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
 			.swiper-slide
-				a(href="" data-youtube-id="jgZkrA8E5do").video.youtube-video
+				.bg-youtube-video
+				.video.youtube-video(data-youtube-id="jgZkrA8E5do")
 					div#VYT
 			.swiper-slide
 				a(href="").img
