--- a/src/components/index/i-6.pug
+++ b/src/components/index/i-6.pug
@@ -8,7 +8,9 @@
 					.title-table
 						h3 THÔNG TIN CHUNG
 					p
-						!= "Chương trình diễn ra tại <span> NHÀ HÁT HÒA BÌNH NGÀY 16/01/2021, TỪ 14:00 – 21:30</span> với nội dung chính như sau 4H - 21H30"
+						!= "Chương trình diễn ra tại <span> NHÀ HÁT HÒA BÌNH</span>"
+					p
+						!= "<span>NGÀY 16/01/2021,TỪ 14:00 – 21:30</span> với nội dung chính như sau"
 					.schedule
 						.item
 							.time
@@ -17,17 +19,17 @@
 								p CHECK IN
 						.item
 							.time
-								p 14:00
+								p 16:30
 							.desc
 								p FANSIGN
 						.item
 							.time
-								p 14:00
+								p 18:00
 							.desc
 								p THẢM VÀNG
 						.item
 							.time
-								p 14:00
+								p 19:00
 							.desc
 								p CHƯƠNG TRÌNH CHÍNH
 					.title-table
@@ -40,7 +42,9 @@
 						p
 							!= "<span>3.</span> MANG MÃ <span>CODE</span> từ <span>SMS</span> đến sự kiện để check in"
 					p
-						!= "<span>VLIVE </span> sẽ gửi <span>SMS</span> thông tin trúng vé đến số điện thoại bạn đã điền. Danh sách các bạn nhận vé sẽ được đăng tải trên fanpage <span>VLIVE </span> theo link."
+						!= "<span>VLIVE </span> sẽ gửi <span>SMS</span> thông tin trúng vé đến số điện thoại bạn đã điền."
+					p
+						!= "Danh sách các bạn nhận vé sẽ được đăng tải trên fanpage <span>VLIVE </span> theo link."
 .index-7
 	.container
 		.title-section
