--- a/src/scss/pages/components/_layout/header.scss
+++ b/src/scss/pages/components/_layout/header.scss
@@ -184,7 +184,7 @@ header {
 				left: 0;
 			}
 			.nav-link {
-				font-family: SFUFuturaBold;
+				font-family: SFUIDisplay-Bold;
 				font-size: 29px;
 				
 			}
