--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -232,8 +232,9 @@
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/7.jpg", alt="")
 							figcaption
 								h5 Bình Chọn
-			.title
-				p.mw-100 Vị trí nghệ sĩ tại các mục bình chọn được sắp xếp theo thứ tự alphabet
+	.container.block-vote
+		.title
+			p.mw-100 Vị trí nghệ sĩ tại các mục bình chọn được sắp xếp theo thứ tự alphabet
 	.btn-selection.shadow
 		button#btn-vote(data-url="#") HOÀN TẤT
 .vector
