--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -11,9 +11,9 @@ header
 								img(src="./assets/images/new-vline/logo-heartbeat.png", alt="", srcset="")
 					.list-nav
 						.nav-item
-							.login
+							a(href="").login
 								img.ofc(src="./assets/images/new-vline/logo-vline.png", alt="", srcset="")
-							.avatar
+							.avatar(islogin="false")
 								img.ofc(src="./assets/images/new-vline/user-icon.png", alt="", srcset="")
 				.navBar
 					.nav-item
