--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -30,7 +30,7 @@
 							a(href="javascript:;" data-scroll-to="8") RISING START OF  THE YEAR
 					.item
 						.item__wrapper
-							a(href="javascript:;" data-scroll-to="9").change V MEMBERSHIP COMMUNITY 
+							a(href="javascript:;" data-scroll-to="9") V MEMBERSHIP COMMUNITY 
 					.item
 						.item__wrapper
 							a(href="javascript:;" data-scroll-to="10") BEST STAGE OF V HEARTBEAT
