--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -8,13 +8,13 @@
 					a(href="") BÌNH CHỌN
 			.guide-selection
 				p
-					!= `Ấn <span>"VOTE"</span> dưới hình nghệ sĩ mà bạn muốn bình chọn trong từng hạng mục`
+					!= `Ấn <span>"VOTE"</span> dưới hình nghệ sĩ mà bạn muốn VOTE trong từng hạng mục`
 				p.mb-30
-					!= `Sau khi đã bình chọn cho tất cả các hạng mục, hãy chọn <span>"HOÀN TẤT"</span> bên dưới nhé!`
+					!= `Sau khi đã VOTE cho tất cả các hạng mục, hãy chọn <span>"HOÀN TẤT"</span> bên dưới nhé!`
 				p
-					!= "Lưu ý:  Mỗi số chứng minh nhân dân/ căn cước công dân/ thẻ học sinh được bình chọn 1 lượt 1 ngày"
+					!= "Lưu ý:  Mỗi số chứng minh nhân dân/ căn cước công dân/ thẻ học sinh được VOTE 1 lượt 1 ngày"
 				p
-					!= `Thời gian bình chọn từ ngày <strong>04/12/2020</strong> – đến ngày <strong>03/01/2021</strong>`
+					!= `Thời gian VOTE từ ngày <strong>04/12/2020</strong> – đến ngày <strong>03/01/2021</strong>`
 				p
 					!= "Một ngày được tính tính từ <strong>0:00:01</strong> tới <strong>23:59:59</strong>"
 			.block--button-catalog
@@ -38,7 +38,7 @@
 		.container-custom.size-1365px
 			.title
 				h3 ARTIST OF THE YEAR
-				p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
+				p Giải thưởng tôn vinh những nghệ sĩ. hoạt động nghệ thuật xuất sắc trong năm 2019
 			.row-wrapper
 				.row.no-gutters.list-vote
 					.item-vote(data-value=1)
@@ -46,31 +46,31 @@
 							.box-img
 								img.ofc(src="./assets/images/item-vote/artist_of_the_year/1.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=2)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/artist_of_the_year/2.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=3)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/artist_of_the_year/3.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 	.container.block-vote(data-scroll-id="7")
 		.container-custom.size-1365px
 			.title
@@ -83,31 +83,31 @@
 							.box-img
 								img.ofc(src="./assets/images/item-vote/best_come_back/1.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=2)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/best_come_back/2.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=3)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/best_come_back/3.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/best_come_back/4.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=5)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/best_come_back/5.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 	.container.block-vote(data-scroll-id="8")
 		.container-custom.size-1365px
 			.title
@@ -120,31 +120,31 @@
 							.box-img
 								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/1.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=2)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/2.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=3)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/3.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 	.container.block-vote(data-scroll-id="9")
 		.container-custom.size-1365px
 			.title
@@ -157,31 +157,31 @@
 							.box-img
 								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/1.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=2)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/2.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=3)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/3.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/4.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=5)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/5.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 	.container.block-vote(data-scroll-id="10")
 		.container-custom.size-1365px
 			.title
@@ -195,46 +195,46 @@
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/1.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=2)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/2.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=3)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/4.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=5)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/5.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=6)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/6.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 					.item-vote(data-value=7)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/7.jpg", alt="")
 							figcaption
-								h5 Bình Chọn
+								h5 VOTE
 	.container.block-vote
 		.title
-			p.mw-100 Vị trí nghệ sĩ tại các mục bình chọn được sắp xếp theo thứ tự alphabet
+			p.mw-100 Vị trí nghệ sĩ tại các mục VOTE được sắp xếp theo thứ tự alphabet
 	.btn-selection.shadow
 		button#btn-vote(data-url="#") HOÀN TẤT
 .vector
