--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -482,12 +482,30 @@ body {
 			font-size: 18px;
 		}
 	}
+	&#auto-login {
+		.register {
+			@media (max-width: 575.98px) {
+				a {
+					display: none;
+				}
+				.btn {
+					&::after {
+						left: 50%;
+						transform: translate(-50% , -50%);
+					}
+				}
+			}
+		}
+	}
 	.title {
 		p {
 			text-align: center;
 			color: #000000;
 			font-size: 50px;
 			font-family: SFUIDisplay-Black;
+			@media (max-width: 575.98px) {
+				font-size: 35px;
+			}
 		}
 	}
 	.login {
