--- a/src/scss/pages/components/_layout/header.scss
+++ b/src/scss/pages/components/_layout/header.scss
@@ -60,6 +60,12 @@ header {
 				.avatar {
 					position    : relative;
 					padding-left: 25px;
+					img {
+						max-width: 35px;
+						max-height: 39px;
+						width: 100%;
+						height: 100%;
+					}
 					&:after {
 						content   : '';
 						position  : absolute;
@@ -69,13 +75,6 @@ header {
 						height    : 100%;
 						transform : translateY(-50%);
 						background: #ffffff;
-					}
-					figure {
-						height       : 35px;
-						width        : 35px;
-						border-radius: 50%;
-						background   : #606060;
-						overflow     : hidden;
 					}
 				}
 
