--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -65,6 +65,12 @@
 					opacity: 1;
 				}
 			}
+			@media (max-width: 767.98px) {
+				&::after {
+					width: 100px;
+					height: 100px;
+				}
+			}
 		}
 	}
 	.swiper-button-next {
@@ -111,7 +117,9 @@
 				opacity: 1;
 			}
 		}
-		
+		@media (max-width: 575.98px) {
+			display: none;
+		}
 	}
 }
 
@@ -137,6 +145,9 @@
 					line-height: 1;
 					text-align: right;
 					color: #00fcff;
+					@media (max-width: 575.98px) {
+						font-size: 70px;
+					}
 				}
 			}
 			.sub-title {
@@ -177,6 +188,12 @@
 			}
 			p + p {
 				font-family: SFUIDisplay-Bold;
+			}
+		}
+		@media (max-width: 767.98px) {
+			background: unset;
+			.step__wrapper {
+				padding: 0;
 			}
 		}
 	}
