--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -58,8 +58,7 @@ html(lang="en")
 							button#btn-submit.btn GỬI VÀ QUAY LẠI
 				.note
 					p *Mã vé tham dự sẽ được gửi qua điện thoại trong thời gian tới
-		input#checkLogin(type='text' hidden value='false')
-		input#checkVote(type='text' hidden value='true')
+		input#checkLogin(type='text' hidden value='true')
 		.d-none
 			.form-login#auto-login(url-redirect="#")
 				.title
