--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -34,7 +34,7 @@ html(lang="en")
 				.sub-title
 					p Hãy quay lại vào ngày mai để tiếp tục bình chọn nhé
 				.button-info.common
-					button#login.btn QUAY LẠI
+					button#login.btn(data-fancybox-close) QUAY LẠI
 				.note
 					p *Mã vé tham dự sẽ được gửi qua điện thoại trong thời gian tới
 		.d-none
