--- a/src/components/_layout/_footer.pug
+++ b/src/components/_layout/_footer.pug
@@ -5,7 +5,7 @@ footer
 		.row
 			.list-social-media.col-md-8
 				p
-					!= "Tải ứng dụng <span>VLINE</span> tại"
+					!= "Tải ứng dụng <span>VLIVE</span> tại"
 				.social__wrapper
 					ul
 						li.google
