--- a/src/components/index/i-3.pug
+++ b/src/components/index/i-3.pug
@@ -14,9 +14,9 @@
 				.step
 					.step__wrapper
 						p
-							!= "Để có cơ hội cầm trên tay chiếc vé tham gia <span>V HEARTBEAT Year End Party</span>, bạn vui lòng thực hiện đầy đủ 02 bước sau đây"
+							!= "Để có cơ hội cầm trên tay chiếc vé tham gia <span>V HEARTBEAT Year End Party</span>, bạn vui lòng thực hiện đầy đủ 03 bước sau đây"
 						p 1. ĐĂNG NHẬP
-						p 2. NHẬP THÔNG TIN CÁ NHÂN
 						p 3. BÌNH CHỌN VLIVE AWARDS
+						p 2. NHẬP THÔNG TIN NHẬN VÉ
 .vector
 	img(src="./assets/images/new-vline/vector.png", alt="")
