--- a/src/components/index/i-6.pug
+++ b/src/components/index/i-6.pug
@@ -36,11 +36,11 @@
 						h3 CÁCH THỨC THAM GIA
 					.step-join
 						p
-							!= "<span>1.</span> NHẬP THÔNG TIN CÁ NHÂN"
+							!= "<span>1.</span> Nhập thông tin cá nhân"
 						p
-							!= "<span>2.</span> BÌNH CHỌN VLIVE AWARDS"
+							!= "<span>2.</span> Bình chọn <span>VLIVE AWARDS</span>"
 						p
-							!= "<span>3.</span> MANG MÃ <span>CODE</span> từ <span>SMS</span> đến sự kiện để check in"
+							!= "<span>3.</span> Mang ma <span>CODE</span> từ <span>SMS</span> đến sự kiện để check in"
 					p
 						!= "<span>VLIVE </span> sẽ gửi <span>SMS</span> thông tin trúng vé đến số điện thoại bạn đã điền."
 					p
