--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -482,6 +482,24 @@ body {
 			font-size: 18px;
 		}
 	}
+	&#form-thank {
+		@media (max-width: 575.98px) {
+			.title {
+				p {
+					font-size: 25px;
+				}
+			}
+			.sub-title {
+				font-size: 16px;
+			}
+			.button-info {
+				button {
+					height: 65px;
+					font-size: 35px;
+				}
+			}
+		}
+	}
 	&#auto-login {
 		.register {
 			@media (max-width: 575.98px) {
