--- a/src/components/index/i-6.pug
+++ b/src/components/index/i-6.pug
@@ -50,26 +50,26 @@
 		.title-section
 			h3 VLIVE YEAR END PARTY
 		.block-video
-			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
+			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/20428" href="javascript:;" ).item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
 					p 2016
-			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
+			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/52251" href="javascript:;" ).item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
-					p 2016
-			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
+					p 2017
+			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/100231" href="javascript:;" ).item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
-					p 2016
-			a(data-fancybox href="https://www.youtube.com/watch?v=0R8IbpKXavM").item-video
+					p 2018
+			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/167537" href="javascript:;" ).item-video
 				.img
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
-					p 2016
+					p 2019
 .rule-pc(data-scroll-id="5")
 	.img
 		img(src="./assets/images/new-vline/rule-pc.png", alt="")
