--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -6,9 +6,8 @@
 					.container
 						img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
 			.swiper-slide
-				.bg-youtube-video
-				.video.youtube-video(data-youtube-id="jgZkrA8E5do")
-					div#VYT
+				.video(data-url="")
+					iframe(src="https://www.vlive.tv/embed/225569?autoPlay=false",  frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen)
 			.swiper-slide
 				a(href="").img
 						img.ofc(src="./assets/images/new-vline/banner-3.png", alt="", srcset="")
