--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -57,7 +57,7 @@ html(lang="en")
 							button#btn-submit.btn GỬI VÀ QUAY LẠI
 				.note
 					p *Mã vé tham dự sẽ được gửi qua điện thoại trong thời gian tới
-		input#checkLogin(type='text' hidden value='true')
+		input#checkLogin(type='text' hidden value='false')
 		.d-none
 			.form-login#auto-login(url-redirect="#")
 				.title
@@ -67,6 +67,8 @@ html(lang="en")
 						a(href="#") Sign up with FaceBook
 					.btn.btn-google(data-key="111231613981-4ar5t5o0nmb5aon7f4eal155954didl4.apps.googleusercontent.com")
 						a(href="#") Sign up with google
+					.btn.btn-vline(data-key="111231613981-4ar5t5o0nmb5aon7f4eal155954didl4.apps.googleusercontent.com")
+						a(href="#") Sign up with Vline
 		block scripts
 		script(type="text/javascript", src="https://www.youtube.com/iframe_api")
 		script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
